# zenn-hackathon-search

./: .env.example  .gitignore  README.md
backend/: main.py  pyproject.toml  requirements.txt
backend/mcp_server/: __init__.py  server.py
backend/routers/: chat.py  projects.py  search.py
backend/services/: __init__.py  agentic_rag.py  config.py  database.py  hybrid_executor.py  importer.py  llm_factory.py  query_router.py  rag.py  summarizer.py  text2sql.py
data/articles/1/500ban_5e31485eb775ee/: article.md  metadata.json
data/articles/1/5hige99_58212a00887146/: article.md  metadata.json
data/articles/1/acntechjp_018aa891fdbdac/: article.md  metadata.json
data/articles/1/aobaiwaki_fe8225526034d7/: article.md  metadata.json
data/articles/1/atworks_np_bb4e4fc79be314/: article.md  metadata.json
data/articles/1/axelasports_ccc4883dc1e3c7/: article.md  metadata.json
data/articles/1/bamb00eth_20250210gcphackathon/: article.md  metadata.json
data/articles/1/bidire_ai_b551feb3461089/: article.md  metadata.json
data/articles/1/caen_c202f26e2cbddc/: article.md  metadata.json
data/articles/1/cloudknowhow_52d49b328750ab/: article.md  metadata.json
data/csv/: 1_hackathon_enriched.csv  2_hackathon_enriched.csv  3_hackathon_enriched.csv
data/soucedata/: 1_hackathon.html  2_hackathon.html  3_hackathon.html
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: ChatInterface.tsx  Leaderboard.tsx  MessageContent.tsx  ProjectCard.tsx  SourcesPanel.tsx
frontend/src/lib/: api.ts
(+718 files in other folders)
